--- a/website.html
+++ b/website.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -152,4 +152,4 @@ function submitUsername() {
 </script>
 
 </body>
-
+</html>
